--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 
     <!-- Additional Libraries -->
     <dependency>
+      <groupId>com.jfoenix</groupId>
+      <artifactId>jfoenix</artifactId>
+      <version>9.0.10</version>
+    </dependency>
+    <dependency>
       <groupId>org.controlsfx</groupId>
       <artifactId>controlsfx</artifactId>
       <version>11.2.1</version>
