--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
   <dependencies>
     <!-- JavaFX Dependencies -->
     <dependency>
+      <groupId>com.fazecast</groupId>
+      <artifactId>jSerialComm</artifactId>
+      <version>2.9.3</version>
+    </dependency>
+    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version>
