--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20240303</version>
+    </dependency>
 
     <!-- JUnit for Testing -->
     <dependency>
