--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
       </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>org.mindrot</groupId>
+      <artifactId>jbcrypt</artifactId>
+      <version>0.4</version>
+    </dependency>
+
     <!-- JUnit for Testing -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
