--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
   </repositories>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.fazecast</groupId>
+      <artifactId>jSerialComm</artifactId>
+      <version>2.9.3</version>
+      </dependency>
     <!-- JavaFX Dependencies -->
     <dependency>
       <groupId>mysql</groupId>
